Projekt als Unterkapitel.

--- a/Intro/c05_Erstes_Dokument.tex
+++ b/Intro/c05_Erstes_Dokument.tex
@@ -36,6 +36,9 @@ zusätzlich gibt es noch die Option \type{landscape} für Dokumente im Querforma
 
 Außerdem gibt es die Formate S3 bis S6, S8, SM und SW für die Darstellung am Bildschirm, z.\,B. für Präsentationen.
 
+\startsubsection[title={Projekte}]
+\index{Projekt}
+
 Für größere Arbeiten gibt es eine Projektverwaltung.
 In der obersten Ebene werden alle Einstellungen für alle Produkte in einer Environment-Datei festgelegt.
 In der nächsten Ebene befinden sich dann die einzelnen Produkte.
@@ -64,6 +67,8 @@ Es empfiehlt sich die Dateiarten anhand des Dateinamens zu unterscheiden.
 \startdescription{\type{c}}
   Die einzelnen Kapitel eines Produkts.
 \stopdescription
+
+\stopsubsection
 
 \stopsection
 
