Eckige oder geschweifte Klammern?

--- a/Intro/c05_Erstes_Dokument.tex
+++ b/Intro/c05_Erstes_Dokument.tex
@@ -36,6 +36,15 @@ zusätzlich gibt es noch die Option \type{landscape} für Dokumente im Querforma
 
 Außerdem gibt es die Formate S3 bis S6, S8, SM und SW für die Darstellung am Bildschirm, z.\,B. für Präsentationen.
 
+Wie man im Beispiel sieht, verwendet ConTeXt zwei Arten von Klammern.
+Text der ausgegeben wird steht normalerweise in geschweiften Klammern \type{{}},
+Optionen oder Parameter in eckigen Klammern \type{[]}.
+Dabei werden Optionen und Parameter in getrennten Klammerpaaren eingegeben.
+
+\starttyping
+\Befehl[optionon][parameter=wert]{Text}
+\stoptyping
+
 \startsubsection[title={Projekte}]
 \index{Projekt}
 
