Kapitel Links überarbeitet, URLs im Dokument angepasst.

--- a/Intro/c01_Vorwort.tex
+++ b/Intro/c01_Vorwort.tex
@@ -10,17 +10,18 @@
 
 \startsubject[title=Vorwort]
 \startparagraph
-\useURL[deesaster][http://www.deesaster.org/latex/EPUB-LaTeX-Beispiel.tar.gz][][Beispieldokument LaTeX]
 Diese Dokument basiert auf einem Beispieldokument von Dominik Wagenführ.
 Es wurde mit \type{pandoc} von LaTeX nach ConTeXt konvertiert und manuell nachbearbeitet.
-Das Originaldokument gibt es hier zum Vergleich: \from[deesaster]
+Das Originaldokument gibt es hier zum Vergleich:
+\goto{Beispieldokument LaTeX}[url(http://www.deesaster.org/latex/EPUB-LaTeX-Beispiel.tar.gz)]
+
 \stopparagraph
 
 \startparagraph
-\useURL[githubintro][https://github.com/AKielhorn/Context-Intro.git][][Github]
 Um diese Dokument übersichtlich zu halten, werden nicht immer die erforderlichen ConTeXt-Befehle gezeigt.
 Die Befehle zu den Beispielen lassen sich im Quelltext finden.
-Dieser ist Bestandteil des Dokuments und ist in der aktuellen Version auf \from[githubintro] zu finden.
+Dieser ist Bestandteil des Dokuments und ist in der aktuellen Version auf 
+\goto{Github}[url(https://github.com/AKielhorn/Context-Intro.git)] zu finden.
 \stopparagraph
 
 \stopsubject
