--- a/Intro/c03_Installation.tex
+++ b/Intro/c03_Installation.tex
@@ -29,10 +29,9 @@ wget http://minimals.contextgarden.net/setup/first-setup.sh
 sh ./first-setup.sh --engine=luatex --modules=all
 \stoptyping
 
-\useURL[contextwindows][https://wiki.contextgarden.net/ConTeXt_Standalone\#Windows][][Contextgarden]
 
-Im \from[contextwindows] gibt es ein Archiv mit der notwendigen Software für Windows:
-\index{Windows}
+Im \goto{Contextgarden}[url(https://wiki.contextgarden.net/ConTeXt_Standalone\#Windows)]
+gibt es ein Archiv mit der notwendigen Software für Windows: \index{Windows}
 
 \starttyping
 context-setup-mswin.zip
