--- a/Intro/c27_Tabellen.tex
+++ b/Intro/c27_Tabellen.tex
@@ -117,7 +117,7 @@ Mit der Option \type{nc} werden mehrere Spalten (Column) und mit der Option \typ
 Es sind nur rechteckige Zellen möglich.
 
 (Beispiel von
-\useURL[url3][https://en.wikibooks.org/wiki/LaTeX/Tables]\from[url3]):
+\goto{\hyphenatedurl{https://en.wikibooks.org/wiki/LaTeX/Tables}}[url(https://en.wikibooks.org/wiki/LaTeX/Tables)]):
 \blank[big]
 
 \starttyping
