Literaturverzeichnis neu (MkIV)

--- a/Intro/c51_Verzeichnisse.tex
+++ b/Intro/c51_Verzeichnisse.tex
@@ -43,7 +43,7 @@ Es gibt auch ein  Stichwortverzeichnis:
 \startsubsection[title={Literaturverzeichnis}]
 
 Und zuletzt „natürlich“ das Literaturverzeichnis:
-\placepublications[criterium=all]
+\placelistofpublications[intro][method=dataset,numbering=no]
 
 \stopsubsection
 
