--- a/Intro/prd_intro.tex
+++ b/Intro/prd_intro.tex
@@ -32,7 +32,7 @@
 %\component [c37_Eigene_Befehle]
 \component [c39_Grafiken]
 \component [c41_Zitate]
-%\component [c43_Zähler]
+\component [c43_Literatur]
 \component [c45_Trennungen]
 \component [c47_Spielereien]
 \component [c49_Ausblick]
