Environment: \it statt \sl für \em

--- a/env_intro.tex
+++ b/env_intro.tex
@@ -48,8 +48,10 @@
 %
 % Schriften vor typearea
 %
-%\setupbodyfontenvironment[default][em=italic] % default = slanted
+\setupbodyfontenvironment[default][em=italic] % default = slanted
 %\setupbodyfontenvironment[default][em=bold]
+%
+\setupalign[hz,hanging]
 %
 % Fallback für Mathe Symbole
 %
